--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,17 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-content .modal-header {
+  background-color: #512da8;
+  color: floralwhite;
+  border-bottom: none; }
+  .modal-content .modal-header .close {
+    color: floralwhite; }
+
+.modal-content .modal-body {
+  background-color: #d1c4e9; }
+
+.modal-content .modal-footer {
+  background-color: #9575cd;
+  border-top: none; }
