--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,3 +74,24 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+
+.modal-content {
+  .modal-header {
+    background-color: $background-dark;
+    color: floralwhite;
+    border-bottom: none;
+
+    .close {
+      color: floralwhite;
+    }
+  }
+
+  .modal-body {
+    background-color: $background-pale;
+  }
+
+  .modal-footer {
+    background-color: $background-light;
+    border-top: none;
+  }
+}
